...
            "state": "translated",
            "value": "Bảng tin Đang theo dõi đang trống"
          }
        }
      }
    },
    "구분선": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Divider"
          }
...
            "state": "translated",
            "value": "Quốc gia"
          }
        }
      }
    },
    "굵게": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Bold"
          }
...
            "state": "translated",
            "value": "Không thể xóa trả lời"
          }
        }
      }
    },
    "대체 텍스트": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Alt text"
          }
...
            "state": "translated",
            "value": "Ảnh trong bài"
          }
        }
      }
    },
    "본문 이어 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue writing"
          }
...
            "state": "translated",
            "value": "Chọn lý do khác"
          }
        }
      }
    },
    "사진": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Photo"
          }
...
            "state": "translated",
            "value": "Lưu"
          }
        }
      }
    },
    "저장 상태 보기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "View save status"
          }
...
            "state": "translated",
            "value": "Xem tất cả"
          }
        }
      }
    },
    "정렬": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Align"
          }
...
            "state": "translated",
            "value": "Chính sách"
          }
        }
      }
    },
    "제목": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Title"
          }
...
